<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>saveme</groupId>
    <artifactId>help</artifactId>
    <version>1.0-SNAPSHOT</version>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>10</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <junit.platform.version>1.3.0-M1</junit.platform.version>
    </properties>

    <dependencies>

        <!-- COMMON LIBS (Log4J2 & Vavr) -->
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j-impl</artifactId>
            <version>LATEST</version>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>io.vavr</groupId>
            <artifactId>vavr</artifactId>
            <version>LATEST</version>
        </dependency>

        <!-- JAXB (for JSE 9+ only!) -->
        <dependency>
            <groupId>javax.xml.bind</groupId>
            <artifactId>jaxb-api</artifactId>
            <version>LATEST</version>
        </dependency>
        <dependency>
            <groupId>org.glassfish.jaxb</groupId>
            <artifactId>jaxb-jxc-jdk9</artifactId>
            <version>LATEST</version>
        </dependency>
        <dependency>
            <groupId>javax.activation</groupId>
            <artifactId>javax.activation-api</artifactId>
            <version>LATEST</version>
        </dependency>

        <!-- H2 -->
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <version>LATEST</version>
            <!--<scope>test</scope>-->
        </dependency>

        <!-- CODE GENERATION (Lombok & CheckerFramework) -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>LATEST</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>edu.washington.cs.types.checker</groupId>
            <artifactId>checker-framework</artifactId>
            <version>LATEST</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>LATEST</version>
            <scope>provided</scope>
        </dependency>

        <!-- JDOM -->
        <dependency>
            <groupId>org.jdom</groupId>
            <artifactId>jdom2</artifactId>
            <version>2.0.6</version>
        </dependency>

        <!--JAX-WS-->
        <dependency>
            <groupId>org.glassfish</groupId>
            <artifactId>javax.xml.ws</artifactId>
            <version>LATEST</version>
        </dependency>
        <dependency>
            <groupId>com.sun.xml.ws</groupId>
            <artifactId>jaxws-rt</artifactId>
            <version>LATEST</version>
        </dependency>

        <!-- TEST (JUnit 5 & Mockito) -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>LATEST</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>java-hamcrest</artifactId>
            <version>LATEST</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-all</artifactId>
            <version>LATEST</version>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <build>
        <plugins>

            <!-- COMPILER (Java10+ and lombok compatible) -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.7.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <compilerArgs>
                        <arg>-parameters</arg>
                        <!--<arg>&#45;&#45;add-modules=java.xml.ws.annotation</arg>-->
                        <!--<arg>&#45;&#45;permit-illegal-access</arg>-->
                        <!--<arg>-J&#45;&#45;add-opens</arg>-->
                        <!--<arg>-Jjdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>-->
                        <!--<arg>-J&#45;&#45;add-opens</arg>-->
                        <!--<arg>-Jjdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>-->
                        <!--<arg>-J&#45;&#45;add-opens</arg>-->
                        <!--<arg>-Jjdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>-->
                        <!--<arg>-J&#45;&#45;add-opens</arg>-->
                        <!--<arg>-Jjdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>-->
                        <!--<arg>-J&#45;&#45;add-opens</arg>-->
                        <!--<arg>-Jjdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>-->
                        <!--<arg>-J&#45;&#45;add-opens</arg>-->
                        <!--<arg>-Jjdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>-->
                        <!--<arg>-J&#45;&#45;add-opens</arg>-->
                        <!--<arg>-Jjdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>-->
                        <!--<arg>-J&#45;&#45;add-opens</arg>-->
                        <!--<arg>-Jjdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>-->
                        <!--<arg>-J&#45;&#45;add-opens</arg>-->
                        <!--<arg>-Jjdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>-->
                    </compilerArgs>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.ow2.asm</groupId>
                        <artifactId>asm</artifactId>
                        <version>6.2</version>
                    </dependency>
                </dependencies>
            </plugin>

            <!-- SUREFIRE (compatible with JUnit 5+, Java 9+, Lombok) -->
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.21.0</version>
                <configuration>
                    <argLine>--add-modules java.se.ee</argLine>
                    <includes>
                        <include>**/Test*.java</include>
                        <include>**/*Test.java</include>
                        <include>**/*Tests.java</include>
                        <include>**/*TestCase.java</include>
                    </includes>
                    <properties>
                        <!--<includeTags>fast</includeTags>-->
                        <excludeTags>slow</excludeTags>
                        <!--<configurationParameters>-->
                        <!--junit.jupiter.conditions.deactivate = *-->
                        <!--</configurationParameters>-->
                    </properties>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.junit.platform</groupId>
                        <artifactId>junit-platform-surefire-provider</artifactId>
                        <version>LATEST</version>
                    </dependency>
                </dependencies>
            </plugin>



        </plugins>
    </build>


</project>